[workspace]
resolver = "2"
members = [ "tonic-h3", "tonic-h3-tests", "h3-util", "axum-h3"]
package.edition = "2024"

[workspace.dependencies]
futures = "0.3"
h3 = { version = "0.0.8" }
h3-quinn = "0.0.10"
http = "1"
hyper = { version = "1" , default-features = false}
hyper-util = { version = "0.1", default-features = false, features = ["service", "tokio"] }
prost = "0.14"
prost-build = "0.14"
quinn = { version = "0.11", default-features = false, features = [] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
serial_test = "3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-util = "0.7"
tonic = { version = "0.14", default-features = false, features = ["router", "codegen", "transport"] }
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
trait-variant = "0.1"
s2n-quic = { version = "1", default-features = false, features = ["provider-tls-rustls", "provider-address-token-default"] }
msquic-h3 = { version = "0.0.5", features = [] }
msquic = { version = "2.5.1-beta", default-features = false, features = ["find"] }

axum = {version = "0.8", default-features = false}
http-body-util = "0.1"
bytes = "1"

# quiche dependencies
tokio-quiche = { version = "0.13" , default-features = false}
futures-util = "0.3"
http-body = "1"

# crates in this workspace
tonic-h3 = { path = "tonic-h3" }
tonic-h3-s2n = { path = "tonic-h3-s2n" }
h3-util = { version = "0.0.5", path = "h3-util" , default-features = false }
axum-h3 = { version = "0.0.5", path = "axum-h3" }
