[package]
name = "axum-h3"
version = "0.0.5"
edition.workspace = true
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/tonic-h3"
description = "HTTP/3 for axum"
categories = ["web-programming", "network-programming"]
keywords = ["axum", "h3"]
readme = "README.md"

[dependencies]
axum.workspace = true
tokio.workspace = true
h3-util.workspace = true
hyper-util.workspace = true
tracing.workspace = true
tower.workspace = true
h3.workspace = true
hyper.workspace = true
futures.workspace = true