[package]
name = "h3-util"
version = "0.0.5"
edition.workspace = true
authors = ["youyuanwu@outlook.com"]
description = "h3 utilities for tonic-h3"
repository = "https://github.com/youyuanwu/tonic-h3"
readme = "./README.md"
license = "MIT"
categories = ["web-programming", "network-programming"]
keywords = ["http", "h3"]

[features]
default = []
quinn = ["dep:h3-quinn"]
msquic = ["dep:msquic-h3"]
s2n-quic = ["dep:s2n-quic"]
quiche = ["dep:tokio-quiche"]
gm-quic = ["dep:h3-shim", "dep:gm-quic"]
tracing = []

[dependencies]
h3.workspace = true
hyper.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
tower.workspace = true
hyper-util.workspace = true
bytes.workspace = true

h3-quinn = { workspace = true, optional = true }
h3-shim = { workspace = true, optional = true }
gm-quic = { workspace = true, optional = true }
msquic-h3 = { workspace = true, optional = true }
s2n-quic = { workspace = true, optional = true }
tokio-quiche = { workspace = true, optional = true }
