[package]
name = "tonic-h3-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
h3-quinn.workspace = true
prost.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
serial_test.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic-h3.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
s2n-quic.workspace = true
tonic-h3-s2n.workspace = true
msquic-h3.workspace = true
h3-util.workspace = true
axum.workspace = true
axum-h3.workspace = true
http-body-util.workspace = true
# doc example
http.workspace = true
hyper.workspace = true

[dev-dependencies]
msquic.workspace = true

[build-dependencies]
tonic-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true
