[package]
name = "tonic-h3-test"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
prost.workspace = true
rcgen.workspace = true
rustls.workspace = true
serial_test.workspace = true
test-log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic-h3 = {workspace = true, features = ["quinn", "msquic", "s2n-quic", "quiche"]}
tonic.workspace = true
tonic-prost.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
h3-util.workspace = true
axum.workspace = true
axum-h3.workspace = true
http-body-util.workspace = true
http.workspace = true
# need to enable rustls
quinn = { workspace = true, default-features = false, features = ["aws-lc-rs", "rustls-aws-lc-rs", "runtime-tokio", "log"] }
# need to link with msquic
msquic.workspace = true
futures.workspace = true
hyper.workspace = true

# quiche examples
futures-util.workspace = true
http-body.workspace = true
tokio-quiche.workspace = true

[features]
llvm-cov-mode = []

[build-dependencies]
tonic-prost-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true
