[package]
name = "tonic-h3"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/tonic-h3"
documentation = "https://docs.rs/tonic-h3/latest/tonic_h3/"
description = "gRPC over HTTP/3 for Rust"
categories = ["web-programming", "network-programming"]
keywords = ["gRPC", "h3"]
readme = "../README.md"

[dependencies]
futures.workspace = true
h3-quinn.workspace = true
h3.workspace = true
http.workspace = true
hyper-util.workspace = true
hyper.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
axum.workspace = true
h3-util.workspace = true
axum-h3.workspace = true
http-body-util.workspace = true
