[package]
name = "tonic-h3"
version = "0.0.4"
edition.workspace = true
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/tonic-h3"
documentation = "https://docs.rs/tonic-h3/latest/tonic_h3/"
description = "gRPC over HTTP/3 for Rust"
categories = ["web-programming", "network-programming"]
keywords = ["gRPC", "h3"]
readme = "../README.md"

[features]
default = []
quinn = ["h3-util/quinn"]
msquic = ["h3-util/msquic"]
s2n-quic = ["h3-util/s2n-quic"]
quiche = ["h3-util/quiche"]

[dependencies]
futures.workspace = true
hyper.workspace = true
http.workspace = true
tonic.workspace = true
tower.workspace = true
axum-h3.workspace = true
h3-util = { workspace = true, default-features = false}