[package]
name = "tonic_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic.workspace = true
prost.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true
# prost-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true